--- a/zjk910FinalProject/googlemapexample/googlemapexample2.html
+++ b/zjk910FinalProject/googlemapexample/googlemapexample2.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Geolocation</title>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+ <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <style>
       html, body {
@@ -11,41 +10,11 @@
         padding: 0;
       }
       #map {
-        width: 500px;
-        height: 400px;
+        height: 100%;
       }
     </style>
-	    <meta name="google-signin-scope" content="profile email">
-    <meta name="google-signin-client_id" content="610349580962-vpj2aogr7nf2ndb3bg7ecfuae6qn1lei.apps.googleusercontent.com">
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
   </head>
   <body>
-	<div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
-    <script>
-      function onSignIn(googleUser) {
-        // Useful data for your client-side scripts:
-        var profile = googleUser.getBasicProfile();
-        console.log("ID: " + profile.getId()); // Don't send this directly to your server!
-        console.log('Full Name: ' + profile.getName());
-        console.log('Given Name: ' + profile.getGivenName());
-        console.log('Family Name: ' + profile.getFamilyName());
-        console.log("Image URL: " + profile.getImageUrl());
-        console.log("Email: " + profile.getEmail());
-
-        // The ID token you need to pass to your backend:
-        var id_token = googleUser.getAuthResponse().id_token;
-        console.log("ID Token: " + id_token);
-      };
-    </script>
-	<a href="#" onclick="signOut();">Sign out</a>
-	<script>
-	  function signOut() {
-		var auth2 = gapi.auth2.getAuthInstance();
-		auth2.signOut().then(function () {
-		  console.log('User signed out.');
-		});
-	  }
-	</script>
     <div id="map"></div>
     <script>
       // Note: This example requires that you consent to location sharing when
@@ -69,7 +38,7 @@
             };
 
             infoWindow.setPosition(pos);
-            infoWindow.setContent('Your current location.');
+            infoWindow.setContent('Location found.');
             map.setCenter(pos);
           }, function() {
             handleLocationError(true, infoWindow, map.getCenter());
@@ -88,7 +57,7 @@
       }
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwyjhnYYRviJuRs7CL30cMNL1F6G7OfLw&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
     </script>
   </body>
 </html>
