--- a/zjk910FinalProject/modify.html
+++ b/zjk910FinalProject/modify.html
@@ -24,7 +24,7 @@ div {
 <div ng-app="modifyApp" ng-controller='modifyController'>
 
 	<!-- when the add game button is cliicked it will call the function form slide to unhide/rehide the form that adds games to the database-->
-	<input type="submit" value="Add Game" onclick="formSlide('gameForm')"/>
+	<input type="submit" value="Modify Game" onclick="formSlide('gameForm')"/>
 	<!-- this is the form for putting a new game in the system -->
 	<form ng-hide="myCheck" id="gameForm" hidden>
 		<div >
@@ -55,7 +55,7 @@ div {
 	<!-- this is the form for associating a game with a system-->
 	<br>
 	</br>
-	<input type="submit" value="Add Game to System" onclick="formSlide('gameSystemsForm')"/>
+	<input type="submit" value="Modify Game to System" onclick="formSlide('gameSystemsForm')"/>
 	<form ng-hide="myCheck" id="gameSystemsForm" hidden>
 		<div >
 			<label  >Title</label>
@@ -77,7 +77,7 @@ div {
 	</br>
 	<!-- this is the form for associating a game with a region-->
 
-	<input type="submit" value="Add Game to Region" onclick="formSlide('gameRegionForm')"/>
+	<input type="submit" value="Modify Game to Region" onclick="formSlide('gameRegionForm')"/>
 	<form ng-hide="myCheck" id="gameRegionForm" hidden>
 		<div >
 			<label  >Title</label>
@@ -99,7 +99,7 @@ div {
 	</br>
 	<!-- this is the form for associating a game with a tag-->
 
-	<input type="submit" value="Add Tag To Game" onclick="formSlide('gameTagForm')"/>
+	<input type="submit" value="Modify Tag To Game" onclick="formSlide('gameTagForm')"/>
 	<form ng-hide="myCheck" id="gameTagForm" hidden>
 		<div >
 			<label >Title</label>
@@ -119,7 +119,7 @@ div {
 	</form>
 	<br>
 	</br>
-	<input type="submit" value="Add Publisher" onclick="formSlide('publisherForm')"/>
+	<input type="submit" value="Modify Publisher" onclick="formSlide('publisherForm')"/>
 	<form ng-hide="myCheck" id="publisherForm" hidden>
 		<div >
 			<label  >Title</label>
@@ -144,7 +144,7 @@ div {
 
 	<br>
 	</br>
-	<input type="submit" value="Add Developer" onclick="formSlide('developerForm')"/>
+	<input type="submit" value="Modify Developer" onclick="formSlide('developerForm')"/>
 	<form ng-hide="myCheck" id="developerForm" hidden>
 		<div >
 			<label  >Title</label>
@@ -169,7 +169,7 @@ div {
 
 	<br>
 	</br>
-	<input type="submit" value="Add Sales" onclick="formSlide('salesForm')"/>
+	<input type="submit" value="Modify Sales" onclick="formSlide('salesForm')"/>
 	<form ng-hide="myCheck" id="salesForm" hidden>
 		<div >
 			<label  >Title</label>
