Lots of changes....
...But it works!

--- a/zjk910FinalProject/googlemapexample/googlemapexample2.html
+++ b/zjk910FinalProject/googlemapexample/googlemapexample2.html
@@ -57,7 +57,7 @@
       }
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwyjhnYYRviJuRs7CL30cMNL1F6G7OfLw&callback=initMap">
     </script>
   </body>
 </html>
